--- a/src/app/cobranza/pages/cobros/cobros.component.html
+++ b/src/app/cobranza/pages/cobros/cobros.component.html
@@ -142,12 +142,12 @@
                                         {{valstudents.apellidos}} {{valstudents.nombres}}
                                     </td>
                                     <td class="text-center">
-                                        <div *ngIf="valstudents.is_suscrib==true">
+                                        <a href="javascript:void(0);" *ngIf="valstudents.estado_aula==true" (click)="deshabilitarAlumno(valstudents)">
                                             <p class="text-success" style="font-size: 15px;">✔</p>
-                                        </div>
-                                        <div *ngIf="valstudents.is_suscrib==false">
+                                        </a>
+                                        <a href="javascript:void(0);" *ngIf="valstudents.estado_aula==false" (click)="deshabilitarAlumno(valstudents)">
                                             <p class="text-danger" style="font-size: 15px;">X</p>
-                                        </div>
+                                        </a>
                                     </td>
                                     <td class="text-center">
                                         <div style="display: inline-flex">
@@ -335,7 +335,7 @@
                                             <i class="bi bi-person-square"></i>
                                         </a>
                                         <a class="mx-1" href="javascript:void(0);" (click)="deshabilitarAlumno(valstudents)" 
-                                            data-bs-toggle="tooltip" data-bs-placement="right" title="Información Alumno">
+                                            data-bs-toggle="tooltip" data-bs-placement="right" title="Deshabilitar/Habilitar Alumno">
                                             <i class="bi bi-power"></i>
                                         </a>
                                     </td>
