--- a/src/app/marketing/pages/events/events.component.html
+++ b/src/app/marketing/pages/events/events.component.html
@@ -28,9 +28,13 @@
                         </ng-template>
                         <ng-template #is_estado let-data="adtData" let-emitter="captureEvents">
                             <div>
-                                <span class="badge rounded-pill bg-success" *ngIf="data.event_description=='culminado'">Culminado</span>
-                                <span class="badge rounded-pill bg-danger parpadea" *ngIf="data.event_description=='vivo'">En Vivo</span>
-                            </div>                       
+                                <a href="javascript:void(0);" *ngIf="data.event_description=='culminado'">
+                                    <span class="badge rounded-pill bg-success">Culminado</span>
+                                </a>
+                                <a href="javascript:void(0);" *ngIf="data.event_description=='vivo'" (click)="updateState(data)">
+                                    <span class="badge rounded-pill bg-danger parpadea">En Vivo</span>
+                                </a>
+                            </div>
                         </ng-template>
                         <ng-template #dtActions let-data="adtData" let-emitter="captureEvents">
                             <app-buttons-leads [actions]="dataTableActions" [data]="data" (emitter)="emitter($event)"></app-buttons-leads>
@@ -199,7 +203,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 mb-2">
                     <b>Material</b>
-                    <input class="form-control" type="file" accept="image/*, application/pdf" (change)="onSelectmaterial($event)" multiple>
+                    <input class="form-control" type="file" accept="image/*, application/pdf" (change)="onSelectmaterial($event)">
                     <ol class="list-group list-group-numbered" *ngIf="url_img_material.length>0">
                         <li class="list-group-item d-flex justify-content-between align-items-start" *ngFor="let item of url_img_material,let i= index">
                         <div class="ms-2 me-auto">
@@ -219,7 +223,8 @@
         <div class="card-footer">
             <div class="row">
                 <div class="col-auto">
-                    <button class="btn btn-sm btn-theme" (click)="subirArchivoWeb()" [disabled]="!formEvent.valid">Registrar</button>
+                    <button class="btn btn-sm btn-theme" *ngIf="url_img_750x500.length>0&&url_img_1920x500.length>0&&url_img_constancia.length>0&&url_img_material.length>0"
+                        (click)="subirArchivoWeb()" [disabled]="!formEvent.valid">Registrar</button>
                     <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModal()">Cerrar</button>
                 </div>
             </div>
