--- a/src/app/marketing/pages/events/events.component.html
+++ b/src/app/marketing/pages/events/events.component.html
@@ -231,6 +231,106 @@
         </div>
     </form>
 </ng-template>
+<!-- Modal Registro Evento -->
+<ng-template #modal_edit let-modal>
+    <form [formGroup]="formEdit" class="card border-0 border-left-5 border-theme bg-gradient-theme-light">
+        <div class="card-header">
+            <h5 class="mb-1 title">Actualizar Evento:  {{detalle.event_code}}</h5>
+        </div>
+        <div class="card-body modal-body">
+            <div class="row was-validated">
+                <div class="col-lg-12 col-md-12 col-sm-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-card-heading"></i></span>
+                            <div class="form-floating">
+                                <input placeholder="" formControlName="name_event" class="form-control border-start-0" required>
+                                <label for="floatingInput">Nombre Evento</label>
+                            </div>
+                        </div>
+                        <div *ngIf="formEvent.controls['name_event'].invalid && (formEvent.controls['name_event'].dirty || formEvent.controls['name_event'].touched)" >
+                            <div *ngIf="formEvent.controls['name_event'].errors.required">
+                                <small class="text-danger">Por favor ingrese el nombre evento</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-person-square"></i></span>
+                            <div class="form-floating">
+                                <input placeholder="" formControlName="ponente" class="form-control border-start-0" required>
+                                <label for="floatingInput">Ponente</label>
+                            </div>
+                        </div>
+                        <div *ngIf="formEvent.controls['ponente'].invalid && (formEvent.controls['ponente'].dirty || formEvent.controls['ponente'].touched)" >
+                            <div *ngIf="formEvent.controls['ponente'].errors.required">
+                                <small class="text-danger">Por favor ingrese el nombre del ponente</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-person-square"></i></span>
+                            <div class="form-floating">
+                                <input placeholder="" formControlName="profesion" class="form-control border-start-0" required>
+                                <label for="floatingInput">Profesion</label>
+                            </div>
+                        </div>
+                        <div *ngIf="formEvent.controls['profesion'].invalid && (formEvent.controls['profesion'].dirty || formEvent.controls['profesion'].touched)" >
+                            <div *ngIf="formEvent.controls['profesion'].errors.required">
+                                <small class="text-danger">Por favor ingrese la profesion</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-filetype-key"></i></span>
+                            <div class="form-floating">
+                                <input placeholder="" formControlName="dowload_key" class="form-control border-start-0" required>
+                                <label for="floatingInput">Contraseña Evento</label>
+                            </div>
+                        </div>
+                        <div *ngIf="formEvent.controls['dowload_key'].invalid && (formEvent.controls['dowload_key'].dirty || formEvent.controls['dowload_key'].touched)" >
+                            <div *ngIf="formEvent.controls['dowload_key'].errors.required">
+                                <small class="text-danger">Por favor ingrese la contraseña</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 mb-2">
+                    <div class="form-group mb-2 position-relative">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-calendar"></i></span>
+                            <div class="form-floating">
+                                <input placeholder="" formControlName="fecha_evento" type="datetime-local" class="form-control border-start-0" required>
+                                <label for="floatingInput">Fecha Evento</label>
+                            </div>
+                        </div>
+                        <div *ngIf="formEvent.controls['fecha_evento'].invalid && (formEvent.controls['fecha_evento'].dirty || formEvent.controls['fecha_evento'].touched)" >
+                            <div *ngIf="formEvent.controls['fecha_evento'].errors.required">
+                                <small class="text-danger">Por favor ingrese la fecha del evento</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="row">
+                <div class="col-auto">
+                    <button class="btn btn-sm btn-theme" (click)="updateEvent()" [disabled]="!formEdit.valid">Guardar</button>
+                    <button class="btn btn-sm btn-danger text-light mx-3" (click)="closeModalEdit()">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</ng-template>
 <!--SPINNER-->
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "triangle-skew-spin">
 </ngx-spinner>
