--- a/src/app/alumno/pages/academico/detalle/detalle.component.html
+++ b/src/app/alumno/pages/academico/detalle/detalle.component.html
@@ -318,7 +318,7 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-12 col-md-12 col-lg-6">
+    <div class="col-sm-12 col-md-12 col-lg-6" *ngIf="courseCode">
         <app-calendar [course]="courseCode"></app-calendar>
     </div>
 </div>
