--- a/src/app/cobranza/pages/cobros/cobros.component.html
+++ b/src/app/cobranza/pages/cobros/cobros.component.html
@@ -748,6 +748,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row mb-2">
+                        <div class="col">
+                            <hr>
+                            <div class="custom-dropzone" ngx-dropzone [accept]="'image/*'" (change)="onSelect($event)">
+                                <ngx-dropzone-label>
+                                    Selecciona Nueva Imagen
+                                </ngx-dropzone-label>
+                                <ngx-dropzone-image-preview ngProjectAs="ngx-dropzone-preview" *ngFor="let f of files" [file]="f"
+                                    [removable]="true" (removed)="onRemove(f)">
+                                    <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+                                </ngx-dropzone-image-preview>
+                            </div>
+                        </div>
+                    </div>
                     <!-- <div class="row mb-2">
                         <div class="col">
                             <div class="form-group">
